<resources>
    <string name="app_name">QuickAnswers</string>
    <string name="questionTextHint">Question…</string>
    <string name="headlineText">Welcome back</string>
    <string name="subheadingText">Make a quick survey</string>
    <string name="questionGuideText">Make a quick survey</string>
    <string name="sendButtonDescription">send survey</string>
    <string name="freeTextHint">Answer…</string>
    <string name="minHint">Min…</string>
    <string name="maxHint">Max…</string>
    <string name="toString">to</string>
    <string name="defaultHint">Add…</string>
    <string name="removeChoiceDescription">Remove choice</string>
    <string name="choice">choice</string>
    <string-array name="inputOptions">
        <item>Multiple choices</item>
        <item>Free text</item>
        <item>Yes/No</item>
        <item>Scale</item>
    </string-array>
</resources>
