<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/editText"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="0"
        android:gravity="center_vertical"
        android:hint="@string/defaultHint"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/defaultLightText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/removeButton"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/removeButton"
        style="@style/AppTheme"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:background="@color/noColor"
        android:contentDescription="@string/removeChoiceDescription"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/bin_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/choice_circle"
        android:tint="@color/colorPrimary"
        android:layout_marginStart="3dp"
        android:contentDescription="@string/choice" />


</androidx.constraintlayout.widget.ConstraintLayout>